feat: v1.1.1 - 工具系统重构 + 附件系统 + 子Agent 20并发
工具系统重构：30+旧工具 → 19个统一工具（action参数模式），智能action补齐
附件系统：PDF/Word/Excel解析（PDFBox+POI），上传改暂存模式，按类型图标
连接池优化：ConnectionProvider + HTTP/2 + 启动预热，TTFB诊断日志
异步执行：工具异步化 + tool_call_start事件 + 紫色加载卡片
子Agent提升：并发5→20，SynchronousQueue，批量收集batchCollectAgents
API Key数据库化：前端配置→sys_config表，预热运行时优先查库
前端改进：AgentPanel action显示、附件重写、pending卡片动画、暗色适配
修复：JSON括号匹配、non-thinking回退、max_execute_count默认100
版本号：后端/前端/Electron三端 1.1.0→1.1.1